# game_cpp

./: .gitignore  Beaver.cpp  Beaver.h  Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Camera.cpp  Camera.h  Elixir.cpp  Elixir.h  Enemy.cpp  Enemy.h  EnemyConfig.cpp  EnemyConfig.h  FrameRate.cpp  FrameRate.h  GameStateManager.cpp  GameStateManager.h  Goblin.cpp  Goblin.h  Golem.cpp  Golem.h  HealthPack.cpp  HealthPack.h  Mage.h  Map.cpp  Map.h  Math.cpp  Math.h  Nocturne.h  Player.cpp  Player.h  README.md  Skeleton.cpp  Skeleton.h  Tile.h  Witch.h  main.cpp
assets/Map/: Reference.txt  map.tmx  map1.tmx  newMap2.tmx
include/config/: ElixirConfig.h  EnemyConfig.h
include/core/: Bullet.h  Camera.h  FrameRate.h  GameStateManager.h  Math.h
include/entities/: Beaver.h  Boss.h  Enemy.h  Goblin.h  Golem.h  Mage.h  Nocturne.h  Player.h  Skeleton.h  Witch.h
include/items/: Elixir.h  HealthElixir.h  StrengthElixir.h
include/map/: Map.h  Tile.h
src/: main.cpp
src/core/: Bullet.cpp  Camera.cpp  FrameRate.cpp  GameStateManager.cpp  Math.cpp
src/entities/: Beaver.cpp  Enemy.cpp  Goblin.cpp  Player.cpp
src/items/: Elixir.cpp  HealthElixir.cpp  StrengthElixir.cpp
src/map/: Map.cpp
